src/objects/Location__c.object
<CustomObject>
    <description>IEC - Mapping between Salesforce and SAP for customer</description>
    <fields>
        <fullName>Account_Contact_Address_ID__c</fullName>
        <description>IEC - technical field used for query in Apex code</description>
        <formula>Account__c + &apos;|&apos; + Contact__c + &apos;|&apos; + Address__c</formula>
        <label>Account &amp; Contact &amp; Address ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Contact_ID__c</fullName>
        <description>IEC - technical field used for query in Apex code</description>
        <formula>Account__c + &apos;|&apos; + Contact__c</formula>
        <label>Account &amp; Contact ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Email__c</fullName>
        <description>IEC - Email on account to use on sending to SAP</description>
        <formula>Account__r.Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <description>IEC - Name of account to use on sending to SAP</description>
        <formula>Account__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Payment_Term__c</fullName>
        <formula>Account__r.Payment_Term__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Payment Term</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Payment_Type__c</fullName>
        <formula>TEXT(Account__r.Default_Payment_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Payment Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Phone__c</fullName>
        <formula>Account__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Record_Type_Id__c</fullName>
        <formula>Account__r.RecordTypeId</formula>
        <label>Account Record Type Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_VAT_Number__c</fullName>
        <formula>Account__r.VAT_Number__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account VAT Number</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>IEC - Reference to account serving as SAP sold to</description>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Address_Name__c</fullName>
        <label>Address Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Address</label>
        <referenceTo>IECAddress__c</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Attention__c</fullName>
        <label>Attention</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <formula>Address__r.City__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>City</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Email__c</fullName>
        <formula>Contact__r.Email</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_First_Name__c</fullName>
        <formula>Contact__r.FirstName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact First Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Last_Name__c</fullName>
        <formula>Contact__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Last Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Phone__c</fullName>
        <formula>Contact__r.Phone</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Salutation__c</fullName>
        <formula>TEXT(Contact__r.Salutation)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Salutation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact_Title__c</fullName>
        <formula>Contact__r.Title</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contact Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Locations</relationshipLabel>
        <relationshipName>Locations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <formula>Address__r.ISO_Country__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Full_Address__c</fullName>
        <formula>Address__r.Full_Address__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Address</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IEC_Migration_Key__c</fullName>
        <description>IEC - temporary field for data migration - to delete when complete</description>
        <externalId>true</externalId>
        <label>IEC_Migration_Key</label>
        <length>20</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>IEC_Valid_SAP_State__c</fullName>
        <description>IEC - true means to the ISO state code is safe to send to SAP</description>
        <formula>Address__r.ISO_State__r.IEC_Valid_SAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISO State Code SAP is valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ISO_Country_Code__c</fullName>
        <formula>Address__r.ISO_Country_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISO Country Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_Country_Name__c</fullName>
        <formula>Address__r.ISO_Country_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISO Country Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_State_Code_SAP__c</fullName>
        <formula>Address__r.ISO_State_Code_SAP__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISO State Code SAP</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_State_Code__c</fullName>
        <formula>Address__r.ISO_State_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISO State Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ISO_State_Name__c</fullName>
        <formula>Address__r.ISO_State_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ISO State Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Postal_Code_Required__c</fullName>
        <description>This field determine if the Postal Code is required</description>
        <formula>Address__r.ISO_Country__r.IEC_Zip_Postal_Code_required__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Postal Code Required</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>SAP_Id__c</fullName>
        <label>SAP Id</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Shipping_Condition__c</fullName>
        <label>Shipping Condition</label>
        <length>2</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <formula>Address__r.ISO_State__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>State</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Street__c</fullName>
        <formula>Address__r.Street__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Street</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sold To</fullName>
                </value>
                <value>
                    <fullName>Bill To</fullName>
                </value>
                <value>
                    <fullName>Ship To</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VAT_Number__c</fullName>
        <label>VAT Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ZipCode__c</fullName>
        <formula>Address__r.ZipCode__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>ZipCode</label>
        <type>Text</type>
    </fields>
    <label>Location</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Active__c</columns>
        <columns>SAP_Id__c</columns>
        <columns>Account__c</columns>
        <columns>Type__c</columns>
        <columns>Contact__c</columns>
        <columns>Address__c</columns>
        <columns>Full_Address__c</columns>
        <columns>Address_Name__c</columns>
        <columns>Email__c</columns>
        <columns>Phone__c</columns>
        <columns>ISO_Country_Code__c</columns>
        <columns>ISO_State_Code_SAP__c</columns>
        <columns>VAT_Number__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Name__c</field>
            <operation>equals</operation>
            <value>General Public CA</value>
        </filters>
        <label>General Public CA</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>L-{000000}</displayFormat>
        <label>Location</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Locations</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>No_Change_On_Account</fullName>
        <active>true</active>
        <description>Forbid update in Account</description>
        <errorConditionFormula>AND(NOT(ISNEW())
  , NOT(ISBLANK(PRIORVALUE(SAP_Id__c)))
  , ISCHANGED(Account__c)
)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>Data entry is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Change_On_Contact</fullName>
        <active>true</active>
        <description>Forbid entry/update in Contact</description>
        <errorConditionFormula>OR(AND(ISPICKVAL(Type__c, &quot;Sold To&quot;)
     , NOT(ISBLANK(Contact__c))
   )
 , AND(NOT(ISNEW())
     , NOT(ISBLANK(PRIORVALUE(SAP_Id__c)))
     , ISCHANGED(Contact__c)
   )
)</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>Data entry is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Change_On_SAP_Id</fullName>
        <active>true</active>
        <description>Forbid entry/update in SAP Id</description>
        <errorConditionFormula>OR(AND(NOT(OR(ISPICKVAL(Type__c, &quot;Sold To&quot;)
            , ISPICKVAL(Type__c, &quot;Bill To&quot;)
            , ISPICKVAL(Type__c, &quot;Ship To&quot;)
          ))
     , NOT(ISBLANK(SAP_Id__c))
   )
 , AND(NOT(ISNEW())
     , NOT(ISBLANK(PRIORVALUE(SAP_Id__c)))
     , ISCHANGED(SAP_Id__c)
   )
)</errorConditionFormula>
        <errorDisplayField>SAP_Id__c</errorDisplayField>
        <errorMessage>Data entry is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>No_Change_On_Type</fullName>
        <active>true</active>
        <description>Forbid update in Type</description>
        <errorConditionFormula>AND(NOT(ISNEW())
  , NOT(ISBLANK(PRIORVALUE(SAP_Id__c)))
  , ISCHANGED(Type__c)
)</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>Data entry is not allowed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Account</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Type__c, &quot;Sold To&quot;)
  , ISBLANK(Account__c)
)</errorConditionFormula>
        <errorDisplayField>Account__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Contact</fullName>
        <active>true</active>
        <errorConditionFormula>AND(OR(ISPICKVAL(Type__c, &quot;Bill To&quot;)
     , ISPICKVAL(Type__c, &quot;Ship To&quot;)
    )
  , ISBLANK(Contact__c)
)</errorConditionFormula>
        <errorDisplayField>Contact__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Type</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK(TEXT(Type__c))</errorConditionFormula>
        <errorDisplayField>Type__c</errorDisplayField>
        <errorMessage>You must enter a value</errorMessage>
    </validationRules>
</CustomObject>